--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axiom": "^0.13.0",
     "axios": "^1.11.0",
     "ecom-frontend": "file:",
+    "lodash": "^4.17.21",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-multi-carousel": "^2.8.6",
