--- a/package.json
+++ b/package.json
@@ -11,16 +11,27 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "2.8.2",
+    "@stripe/react-stripe-js": "^5.0.0",
     "axiom": "^0.13.0",
     "axios": "^1.11.0",
     "ecom-frontend": "file:",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.544.0",
+    "moment": "^2.30.1",
+    "ra-data-simple-rest": "^5.11.4",
     "react": "^19.1.0",
+    "react-admin": "^5.11.4",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.64.0",
+    "react-icons": "^5.5.0",
+    "react-modal": "^3.16.3",
     "react-multi-carousel": "^2.8.6",
     "react-range-slider-input": "^3.2.1",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.6.2"
+    "react-router-dom": "^7.6.2",
+    "react-stripe-js": "^1.1.5",
+    "three": "^0.180.0",
+    "vanta": "^0.5.24"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
